--- a/ui/ui_table_property.ui
+++ b/ui/ui_table_property.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>494</height>
+    <height>520</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -57,7 +57,7 @@
       <item row="3" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Reference column</string>
+         <string>Referenced column</string>
         </property>
        </widget>
       </item>
