--- a/ui/ui_attribute_browser.ui
+++ b/ui/ui_attribute_browser.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>421</width>
-    <height>41</height>
+    <width>412</width>
+    <height>40</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>40</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -26,16 +32,25 @@
      <property name="maximumSize">
       <size>
        <width>30</width>
-       <height>16777215</height>
+       <height>20</height>
       </size>
      </property>
      <property name="text">
-      <string>...</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../resources.qrc">
+       <normaloff>:/plugins/stdm/images/icons/table.png</normaloff>:/plugins/stdm/images/icons/table.png</iconset>
+     </property>
+     <property name="flat">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
