--- a/ui/ui_import_data.ui
+++ b/ui/ui_import_data.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>492</width>
-    <height>402</height>
+    <width>564</width>
+    <height>503</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -111,24 +111,7 @@
        <string>Options:</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
-       <item row="0" column="0" colspan="2">
-        <widget class="QRadioButton" name="rbAppend">
-         <property name="text">
-          <string>A&amp;ppend Data</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0" colspan="2">
-        <widget class="QRadioButton" name="rbOverwrite">
-         <property name="text">
-          <string>&amp;Overwrite Existing</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
+       <item row="4" column="1">
         <widget class="QComboBox" name="geomClm">
          <property name="enabled">
           <bool>false</bool>
@@ -147,7 +130,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <widget class="QLabel" name="label_2">
          <property name="maximumSize">
           <size>
@@ -157,6 +140,23 @@
          </property>
          <property name="text">
           <string>Geometry Column:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QRadioButton" name="rbAppend">
+         <property name="text">
+          <string>A&amp;ppend Data</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0" colspan="2">
+        <widget class="QRadioButton" name="rbOverwrite">
+         <property name="text">
+          <string>&amp;Overwrite Existing</string>
          </property>
         </widget>
        </item>
@@ -172,13 +172,29 @@
    <property name="subTitle">
     <string>Match source and destination table columns.</string>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_3">
-    <item>
+   <layout class="QGridLayout" name="gridLayout_6">
+    <item row="0" column="0">
      <widget class="QGroupBox" name="groupBox_5">
       <property name="title">
        <string>Source Table:</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="1" rowspan="5">
+        <widget class="QListWidget" name="lstSrcFields">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>250</height>
+          </size>
+         </property>
+         <property name="selectionMode">
+          <enum>QAbstractItemView::SingleSelection</enum>
+         </property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QPushButton" name="btnSrcUp">
          <property name="maximumSize">
@@ -193,6 +209,19 @@
          <property name="icon">
           <iconset resource="../resources.qrc">
            <normaloff>:/plugins/stdm/images/icons/up.png</normaloff>:/plugins/stdm/images/icons/up.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QPushButton" name="btnSrcNone">
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Non&amp;e</string>
          </property>
         </widget>
        </item>
@@ -226,45 +255,95 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QPushButton" name="btnSrcNone">
-         <property name="maximumSize">
-          <size>
-           <width>50</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Non&amp;e</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" rowspan="5">
-        <widget class="QListWidget" name="lstSrcFields">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>250</height>
-          </size>
-         </property>
-         <property name="selectionMode">
-          <enum>QAbstractItemView::SingleSelection</enum>
-         </property>
-         <property name="selectionBehavior">
-          <enum>QAbstractItemView::SelectRows</enum>
-         </property>
-        </widget>
-       </item>
       </layout>
      </widget>
     </item>
-    <item>
+    <item row="0" column="1">
      <widget class="QGroupBox" name="groupBox_6">
       <property name="title">
        <string>Destination Table:</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_4">
-       <item row="0" column="2">
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Value translators:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="3">
+        <widget class="QToolButton" name="btn_delete_translator">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="toolTip">
+          <string>Delete value translator</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="../resources.qrc">
+           <normaloff>:/plugins/stdm/images/icons/remove.png</normaloff>:/plugins/stdm/images/icons/remove.png</iconset>
+         </property>
+         <property name="popupMode">
+          <enum>QToolButton::InstantPopup</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QToolButton" name="btn_add_translator">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="toolTip">
+          <string>Add value translator</string>
+         </property>
+         <property name="whatsThis">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Use value translators to transform the value from the corresponding source table column in order to adopt it to a format that adaptible to the destination column.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="../resources.qrc">
+           <normaloff>:/plugins/stdm/images/icons/add.png</normaloff>:/plugins/stdm/images/icons/add.png</iconset>
+         </property>
+         <property name="popupMode">
+          <enum>QToolButton::InstantPopup</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="2">
+        <widget class="QToolButton" name="btn_edit_translator">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="toolTip">
+          <string>Edit value translator</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="../resources.qrc">
+           <normaloff>:/plugins/stdm/images/icons/edit.png</normaloff>:/plugins/stdm/images/icons/edit.png</iconset>
+         </property>
+         <property name="popupMode">
+          <enum>QToolButton::InstantPopup</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="4">
         <widget class="QPushButton" name="btnDestUp">
          <property name="maximumSize">
           <size>
@@ -281,7 +360,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="2">
+       <item row="1" column="4">
         <widget class="QPushButton" name="btnDestDown">
          <property name="maximumSize">
           <size>
@@ -298,7 +377,14 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="0" rowspan="3">
+       <item row="3" column="0" colspan="4">
+        <widget class="QCheckBox" name="chk_virtual">
+         <property name="text">
+          <string>Show virtual fields</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" rowspan="3" colspan="4">
         <widget class="QListWidget" name="lstTargetFields">
          <property name="minimumSize">
           <size>
